src/styles/isomer-cms/pages/Sites.module.scss
@import '../elements/variable';

@mixin single-site {
  margin-left: $site-margin-horizontal;
  margin-right: $site-margin-horizontal;
  margin-top: $site-margin-vertical;
  margin-bottom: $site-margin-vertical;
  height: $site-height;
  width: $site-width;
  border-radius: 5px;
}

.sitesContainer{
  width: 100%;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  margin-top: 30px;

  .sectionHeader{
    width: $sites-container-width;
    margin-left: $site-margin-horizontal*2;

    .sectionTitle{
      font-size: 28px;
      color: $isomer-blue;
      text-align: left;
    }
  }

  .sites{
    display: flex;
    flex-direction: rows;
    justify-content: flex-start;
    align-items: flex-start;
    flex-wrap: wrap;
    width: $sites-container-width;

    .infoText {
      margin-top: $site-margin-vertical;
      margin-left: $site-margin-horizontal;
    }

    .siteContainer{
      // width: 33.33%;
      box-sizing: border-box;
      display: flex;
      flex-direction: rows;
      justify-content: center;
      align-items: center;

      .site{
        @include single-site;
        background: white;
        box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
        border: none;
        box-sizing: border-box;
        transition: transform 0.2s ease-in;

        .siteImage{
          height: 70%;
          width: 100%;
          background: grey;
          border-top-left-radius: 5px;
          border-top-right-radius: 5px;

        }

        .siteDescription{
          height: 30%;
          width: 100%;
          display: flex;
          flex-direction: column;
          justify-content: center;
          align-items: center;
          padding-left: 15px;

          .siteName{
            width: 100%;
            font-size: .9em;
            color: $body-text;
            margin-bottom: 5px;
          }

          .siteDate{
            width: 100%;
            font-weight: 300;
            color: $body-grey;
            font-size: .6em;
          }
        }

        &:hover{
          transform: translateY(-5px);
        }
      }

      .createNew{
        @include single-site;
        border: 1px dashed $isomer-blue;
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        color: $isomer-blue;

         .bxPlusCircle{
           font-size: 30px;
           margin-bottom: 20px;
         }

         h2{
           font-size: 18px;
         }

         &:hover{
           background-color: white;
           border: 1px solid $isomer-blue;
         }
      }

    }
  }

}

